[package]
name = "twitch_eventsub_structs"
version = "0.1.2"
edition = "2021"
authors = ["Owlkaline"]
description = "Defined Struct types for of all the twitch eventsub responses easy Serialise/Deserialie"
repository = "https://github.com/Owlkaline/TwitchEventSubStructs"
categories = [
  "api-bindings",
  "web-programming",
  "network-programming"
]
keywords = ["Twitch", "api", "EventSub", "Structs"]
resolver = "2"
license = "MIT"

[dependencies]
serde_json = "1.0.117"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_with = "3.8.3"
